--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -190,12 +190,12 @@
         <div class="col-md-6 mb-3 text-center">
         <img src="../static/icon/history_konsultasi.svg" class="img-responsive img" alt="icon_upload_gambar">
         <p class="font-semibold mt-1">List History Konsultasi </p>
-        <button type="button" id="cek_hasil" class="btn btn-custom custom-bg-warning w-100 text-white font-semibold" style="height: 42.8px;">Lihat</button>
+        <a href="/admin/history_konsultasi" id="cek_hasil" class="btn btn-custom custom-bg-warning w-100 text-white font-semibold" style="height: 42.8px;">Lihat</a>
         </div>
         <div class="col-md-6 mb-3 text-center">
           <img src="../static/icon/bar_chart.svg" class="img-responsive img" alt="icon_cek_hasil">
           <p class="font-semibold mt-1">Penyakit Terbanyak </p>
-          <button type="button" id="cek_hasil" class="btn btn-custom custom-bg-warning w-100 text-white font-semibold" style="height: 42.8px;">Lihat</button>
+          <a href="/admin/penyakit_terbanyak" id="cek_hasil" class="btn btn-custom custom-bg-warning w-100 text-white font-semibold" style="height: 42.8px;">Lihat</a>
         </div>
     </section>
   </div>
