--- a/app/templates/admin/login.html
+++ b/app/templates/admin/login.html
@@ -1,8 +1,7 @@
-{% if session['jwt_token'] %}
-    <!-- Jika jwt_token tidak ada -->
-    <script>
-        window.location.href = "/admin/dashboard";
-    </script>
+{% if session['role']=='admin' %}
+<script>
+    window.location.href = "/admin/dashboard";
+</script>
 {% else %}
 <!DOCTYPE html>
 <html lang="en">
