--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -1,3 +1,4 @@
+{% if session['role']=='user' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -304,3 +305,9 @@
       </script>
 </body>
 </html>
+{% else %}
+    <!-- Jika jwt_token tidak ada -->
+    <script>
+        window.location.href = "/";
+    </script>
+{% endif %}
