--- a/app/templates/admin/penyakit_terbanyak.html
+++ b/app/templates/admin/penyakit_terbanyak.html
@@ -1,3 +1,4 @@
+{% if session['role']=='admin' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +8,7 @@
   <!-- Link to Google Fonts Raleway -->
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700&display=swap" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
       min-height: 100vh;
@@ -166,17 +168,12 @@
   <div class="content" id="mainContent">
     <!-- Hero Section -->
     <section class="container my-5" id="home">
-      <div class="row">
-        <div class="col-md-6 mb-3 text-center">
-        <img src="../static/icon/history_konsultasi.svg" class="img-responsive img" alt="icon_upload_gambar">
-        <p class="font-semibold mt-1">List History Konsultasi </p>
-        <button type="button" id="cek_hasil" class="btn btn-custom custom-bg-warning w-100 text-white font-semibold" style="height: 42.8px;">Lihat</button>
-        </div>
-        <div class="col-md-6 mb-3 text-center">
-          <img src="../static/icon/bar_chart.svg" class="img-responsive img" alt="icon_cek_hasil">
-          <p class="font-semibold mt-1">Penyakit Terbanyak </p>
-          <button type="button" id="cek_hasil" class="btn btn-custom custom-bg-warning w-100 text-white font-semibold" style="height: 42.8px;">Lihat</button>
-        </div>
+          <h2 class="text-center">Penyakit Terbanyak</h2>
+          <div class="row justify-content-center">
+            <div class="col-md-8">
+              <canvas id="myChart"></canvas>
+            </div>
+          </div>
     </section>
   </div>
 
@@ -210,7 +207,52 @@
         adjustContentStyle();
       });
     });
-   
+    document.addEventListener('DOMContentLoaded', function () {
+      var ctx = document.getElementById('myChart').getContext('2d');
+      var labels= '{{ names|tojson }}';
+      console.log(labels)
+      labels = JSON.parse(labels);
+      var data = '{{ jml_kasus|tojson }}';
+      console.log(data)
+      data = JSON.parse(data);
+      var myChart = new Chart(ctx, {
+        type: 'bar',
+        data: {
+          labels: labels,
+          datasets: [{
+            data: data,
+            backgroundColor: [
+              'rgba(255, 99, 132, 0.2)',
+              'rgba(54, 162, 235, 0.2)',
+              'rgba(255, 206, 86, 0.2)',
+              'rgba(75, 192, 192, 0.2)',
+              'rgba(153, 102, 255, 0.2)'
+            ],
+            borderColor: [
+              'rgba(255, 99, 132, 1)',
+              'rgba(54, 162, 235, 1)',
+              'rgba(255, 206, 86, 1)',
+              'rgba(75, 192, 192, 1)',
+              'rgba(153, 102, 255, 1)'
+            ],
+            borderWidth: 1
+          }]
+        },
+        options: {
+          scales: {
+            y: {
+              beginAtZero: true
+            }
+          }
+        }
+      });
+    });
   </script>
 </body>
 </html>
+{% else %}
+    <!-- Jika jwt_token tidak ada -->
+    <script>
+        window.location.href = "/";
+    </script>
+{% endif %}
