--- a/app/templates/admin/register.html
+++ b/app/templates/admin/register.html
@@ -1,3 +1,4 @@
+{% if session['role']=='admin' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -101,3 +102,9 @@
   </script>
 </body>
 </html>
+{% else %}
+    <!-- Jika jwt_token tidak ada -->
+    <script>
+        window.location.href = "/";
+    </script>
+{% endif %}
