--- a/app/templates/ganti_password.html
+++ b/app/templates/ganti_password.html
@@ -1,3 +1,4 @@
+{% if session['jwt_token'] %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -111,3 +112,8 @@
   </script>
 </body>
 </html>
+{% else %}
+    <script>
+        window.location.href = "/";
+    </script>
+{% endif %}
