--- a/app/templates/user/hasil_diagnosa.html
+++ b/app/templates/user/hasil_diagnosa.html
@@ -1,3 +1,4 @@
+{% if session['role']=='user' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -96,3 +97,9 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
+{% else %}
+    <!-- Jika jwt_token tidak ada -->
+    <script>
+        window.location.href = "/";
+    </script>
+{% endif %}
