--- a/app/templates/admin/penyakit_terbanyak.html
+++ b/app/templates/admin/penyakit_terbanyak.html
@@ -130,7 +130,7 @@
   <nav class="sidebar bg-light p-2" >
     <div class="text-center">
     <img src="../static/icon/icon_profile_admin.svg" alt="icon_profile_admin">
-    <p class="font-semibold custom-text-warning">Nama</p>
+    <p class="font-semibold custom-text-warning">{{session['full_name']}}</p>
     <hr class=" custom-bg-info custom-border-size btn-custom" >
     </div>
     <ul class="nav flex-column text-start pl-3">
