--- a/app/templates/admin/penyakit_terbanyak.html
+++ b/app/templates/admin/penyakit_terbanyak.html
@@ -220,6 +220,7 @@
         data: {
           labels: labels,
           datasets: [{
+            laebls:"jumlah kasus",
             data: data,
             backgroundColor: [
               'rgba(255, 99, 132, 0.2)',
