--- a/app/templates/user/login.html
+++ b/app/templates/user/login.html
@@ -96,7 +96,7 @@
             <pre>
             </pre>
             <div class="field">
-              <input type="text" id="username-login" placeholder="Masukan Email " required>
+              <input type="text" id="username-login" placeholder="Masukan Username" required>
             </div>
             <div class="field">
               <input type="password" id="pswd-login" placeholder="Masukan Password" required>
