--- a/app/templates/admin/login.html
+++ b/app/templates/admin/login.html
@@ -90,7 +90,7 @@
         <div class="card-body text-center ">
             <h1 class="font-semibold custom-text-warning"> Login Admin</h1>
             <form class="form text-center" action="none" id="form-now">
-                <p class="font-semibold text-danger" id="msg">username / password salah</p>	
+                <p class="font-semibold text-danger" id="msg">contoh msg</p>	
                 <input class="btn bg-white mt-3 mb-3 text-center col-md-6 font-semibold font-regular" type="text" name="username" id="username"><br>
                 <input class="btn bg-white mt-3 mb-3 text-center col-md-6 font-semibold font-regular" type="password" name="password" id="password"><br>
                 <button type="button" id="login" class="col-md-6 mt-3 mb-3 btn btn-custom custom-bg-warning text-white">
@@ -133,7 +133,14 @@
                     saveTokenToLocalStorage(response);
                     window.location.href = '/admin/dashboard'
                 }
-            }
+            },
+            error: function(xhr) {
+            // Menangani kesalahan
+                var errorMessage = JSON.parse(xhr.responseText);
+                console.log(errorMessage);
+                document.getElementById("msg").innerText = errorMessage.msg;
+                document.getElementById("msg").style.display = "block";
+          }
         });
     }
     document.getElementById("login").addEventListener("click", kirim);</script>
