--- a/app/templates/user/hasil_diagnosa.html
+++ b/app/templates/user/hasil_diagnosa.html
@@ -81,11 +81,11 @@
                 {% if link == "klinik" %}
                 <a class="btn btn-custom custom-bg-warning font-semibold" href="https://www.google.com/maps/search/klinik/">Rekomendasi Klinik</a>
                 {% elif link == "apotek" %}
-                <a class="btn btn-custom custom-bg-warning font-semibold" href="https://www.google.com/maps/search/klinik/">Rekomendasi Apotek</a>
+                <a class="btn btn-custom custom-bg-warning font-semibold" href="https://www.google.com/maps/search/apotek/">Rekomendasi Apotek</a>
                 {% elif link == "rumah sakit"%}
                 <a class="btn btn-custom custom-bg-warning font-semibold" href="https://www.google.com/maps/search/rumah+sakit/">Rekomendasi Rumah Sakit</a>
                 {% elif penyakit == "sehat"%}
-                <a class="btn btn-custom custom-bg-warning font-semibold" href="/Tips">Tips Menjaga Kesehara Mata</a>
+                <a class="btn btn-custom custom-bg-warning font-semibold" href="/tips">Tips Menjaga Kesehara Mata</a>
                 {% endif %}
                 {% endfor %}
             {% endif %}
