--- a/app/templates/user/hasil_diagnosa.html
+++ b/app/templates/user/hasil_diagnosa.html
@@ -85,7 +85,7 @@
                 {% elif link == "rumah sakit"%}
                 <a class="btn btn-custom custom-bg-warning font-semibold" href="https://www.google.com/maps/search/rumah+sakit/">Rekomendasi Rumah Sakit</a>
                 {% elif penyakit == "sehat"%}
-                <a class="btn btn-custom custom-bg-warning font-semibold" href="/tips">Tips Menjaga Kesehara Mata</a>
+                <a class="btn btn-custom custom-bg-warning font-semibold" href="/tips">Tips Menjaga Kesehatan Mata</a>
                 {% endif %}
                 {% endfor %}
             {% endif %}
