--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -147,9 +147,9 @@
       <li class="nav-item">
         <a class="nav-link " href="/admin/penyakit_terbanyak"><img src="../static/icon/icon_bar_chart.svg" height="25" width="25" alt="icon_ganti_password">  Penyakit Terbanyak</a>
       </li>
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link " href="/tambah_admin"><img src="../static/icon/profile_default.svg" height="25" width="25" alt="icon_admin"> Tambah Admin</a>
-      </li>
+      </li> -->
       <li class="nav-item">
         <a class="nav-link " href="/keluar"><img src="../static/icon/logout.svg" height="25" width="25" alt="icon_keluar">  Keluar</a>
       </li>
