--- a/app/templates/admin/register.html
+++ b/app/templates/admin/register.html
@@ -76,6 +76,9 @@
       </div>
     {% endif %}
   {% endwith %}
+  <div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
     <div class="card custom-bg-info border-medium" style="border-radius: 20px;">
         <div class="card-body text-center ">
             <h1 class="font-semibold custom-text-warning"> Register New Admin</h1>
