--- a/app/templates/user/dashboard.html
+++ b/app/templates/user/dashboard.html
@@ -99,11 +99,16 @@
                             <h5 class="modal-title" id="cameraModalLabel">Capture Photo</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                         </div>
-                        <div class="modal-body">
-                            <video id="video" width="100%" height="240" autoplay></video>
-                            <button id="snap" class="btn btn-success mt-2">Capture Photo</button>
-                            <canvas id="canvas" width="320" height="240" style="display: none;"></canvas>
-                        </div>
+                        <div class="col-md-6 mb-3 text-center">
+                    <img src="../static/icon/hasil_diagnosa.svg" class="img-responsive img" alt="icon_cek_hasil">
+                    <p class="font-semibold mt-1">Hasil Diagnosa </p>
+                    <button type="button" id="cek_hasil" class="btn btn-custom custom-bg-warning w-100 text-white font-semibold" style="height: 42.8px;">Lihat Hasil</button>
+                </div>
+                     <div class="col-md-6 mb-3 text-center">
+                    <img src="../static/icon/hasil_diagnosa.svg" class="img-responsive img" alt="icon_cek_hasil">
+                    <p class="font-semibold mt-1">Hasil Diagnosa </p>
+                    <button type="button" id="cek_hasil" class="btn btn-custom custom-bg-warning w-100 text-white font-semibold" style="height: 42.8px;">Lihat Hasil</button>
+                </div>
                         <div class="modal-footer">
                             <button id="upload" class="btn btn-primary">Upload Photo</button>
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -135,11 +140,13 @@
                 $('#mainContent').toggleClass('collapsed');
                 adjustContentStyle();
             });
-
+// untuk proses deteksi kamera//`
+// video: Mendapatkan elemen video dari halaman HTML. Elemen ini akan digunakan untuk menampilkan stream video dari kamera perangkat.
+// canvas: Mendapatkan elemen canvas dari halaman HTML. Canvas ini akan digunakan untuk menangkap dan menampilkan gambar dari video.
+// context: Mendapatkan konteks gambar 2D dari elemen canvas. Konteks ini menyediakan fungsi untuk menggambar dan memanipulasi gambar pada canvas.
             var video = document.getElementById('video');
             var canvas = document.getElementById('canvas');
             var context = canvas.getContext('2d');
-
             $('#cameraModal').on('shown.bs.modal', function () {
                 navigator.mediaDevices.getUserMedia({ video: true })
                     .then(function (stream) {
@@ -186,7 +193,9 @@
                     });
                 }, 'image/png');
             });
-
+            // Secara keseluruhan, kode ini memastikan bahwa aliran video dari kamera perangkat dihentikan dan dilepaskan ketika modal
+            //  Bootstrap dengan ID cameraModal ditutup. Ini berguna untuk menghemat sumber daya, mencegah penggunaan kamera yang 
+            // tidak perlu, dan meningkatkan keamanan aplikasi dengan menghentikan aliran media saat tidak lagi diperlukan.
             $('#cameraModal').on('hidden.bs.modal', function () {
                 let stream = video.srcObject;
                 let tracks = stream.getTracks();
@@ -195,14 +204,14 @@
                 });
                 video.srcObject = null;
             });
-
+// peringatan jika tidak menggungagh atau mengupload foto
             $('#cek_hasil').on('click', function () {
                 var files = $('#FormGambar')[0].files;
                 if (files.length === 0) {
                     alert('Please upload a file or take a photo first.');
                     return;
                 }
-
+// upload foto dari files
                 var formData = new FormData();
                 formData.append('gambar', files[0]);
                 $('#cek_hasil').text("Loading...")
@@ -248,3 +257,34 @@
         window.location.href = "/";
     </script>
 {% endif %}
+
+<!-- <!DOCTYPE html
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Alert dengan Bootstrap</title>
+   Menyertakan CSS Bootstrap
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+    <div class="container mt-3">
+        <div class="alert alert-success" role="alert">
+            Ini adalah alert sukses dengan Bootstrap!
+        </div>
+
+        <div class="alert alert-warning" role="alert">
+            Ini adalah alert peringatan dengan Bootstrap!
+        </div>
+
+        <div class="alert alert-danger" role="alert">
+            Ini adalah alert kesalahan dengan Bootstrap!
+        </div>
+    </div>
+
+    Menyertakan JS Bootstrap 
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
+</html>> 
