--- a/app/templates/user/login.html
+++ b/app/templates/user/login.html
@@ -107,6 +107,10 @@
                 <button style="display: block; background: #ffffff00; border: none; width: 330px;color: #ffffff; height: 50px; " id="login-button" type="button" >
                   submit</button></div>
             </div>
+      <!-- <a href="/app/templates/ganti_password.html" class="text-warning">Lupa Password?</a>  -->
+      <div class="btn btn-custom custom-bg-warning font-semibold">
+        <p><a href="/user/dashboard">lupa password</a></p>
+      </div>
             <div class="signup-link">Buat akun <a href="">Daftar sekarang</a></div>
           </form>
           <form action="#" class="signup">
