--- a/app/templates/admin/login.html
+++ b/app/templates/admin/login.html
@@ -84,22 +84,26 @@
       </div>
     {% endif %}
   {% endwith %}
-  
-  
-    <div class="card custom-bg-info border-medium" style="border-radius: 20px;">
-        <div class="card-body text-center ">
-            <h1 class="font-semibold custom-text-warning"> Login Admin</h1>
-            <form class="form text-center" action="none" id="form-now">
-                <p class="font-semibold text-danger" id="msg">contoh msg</p>	
-                <input class="btn bg-white mt-3 mb-3 text-center col-md-6 font-semibold font-regular" type="text" name="username" id="username"><br>
-                <input class="btn bg-white mt-3 mb-3 text-center col-md-6 font-semibold font-regular" type="password" name="password" id="password"><br>
-                <button type="button" id="login" class="col-md-6 mt-3 mb-3 btn btn-custom custom-bg-warning text-white">
-                <h4 class="font-semibold" style="margin-bottom: 0px;">Login</h4>
-                </button>
-            </form>
+  <div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card custom-bg-info border-medium" style="border-radius: 20px;">
+                <div class="card-body text-center ">
+                    <h1 class="font-semibold custom-text-warning"> Login Admin</h1>
+                    <form class="form text-center" action="none" id="form-now">
+                        <p class="font-semibold text-danger" id="msg">contoh msg</p>    
+                        <input class="btn bg-white mt-3 mb-3 text-center col-md-6 font-semibold font-regular" type="text" name="username" id="username"><br>
+                        <input class="btn bg-white mt-3 mb-3 text-center col-md-6 font-semibold font-regular" type="password" name="password" id="password"><br>
+                        <button type="button" id="login" class="col-md-6 mt-3 mb-3 btn btn-custom custom-bg-warning text-white">
+                            <h4 class="font-semibold" style="margin-bottom: 0px;">Login</h4>
+                        </button>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
-  </section>
+</div>
+
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
