--- a/app/templates/user/login.html
+++ b/app/templates/user/login.html
@@ -105,7 +105,7 @@
             <div class="field btn">
               <div class="btn-layer">
                 <button style="display: block; background: #ffffff00; border: none; width: 330px;color: #ffffff; height: 50px; " id="login-button" type="button" >
-                  submit</button></div>
+                  submit disinii</button></div>
             </div>
       <!-- <a href="/app/templates/ganti_password.html" class="text-warning">Lupa Password?</a>  -->
       <div class="btn btn-custom custom-bg-warning font-semibold">
