--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -111,8 +111,7 @@
           <a class="nav-link" href="#contact">Contact</a>
         </li>
         <li class="nav-item">
-          <a class="btn custom-bg-warning btn-custom font-semibold text-white" href="/login_user">Login</a> 
-          <a class="btn custom-bg-warning btn-custom font-semibold text-white" href="/login_admin">Login Admin</a>
+          <a class="btn custom-bg-warning btn-custom font-semibold text-white" href="/login">Login</a> 
         </li>
       </ul>
     </div>
@@ -191,10 +190,10 @@
       <div class="col-md-8">
         <h2 style="font-weight: 800;">Konsultasikan</h2>
         <a href="#" class="btn text-white mb-2" style="background-color: #ffffff2a;">penyakit mata anak</a><br>
-        <a href="/login_user" class="text-white">disini !!</a>
+        <a href="/login" class="text-white">disini !!</a>
       </div><br>
       <div class="col-md-4 centered-button-container" >
-        <button onclick="document.location.href='/login_user'" class="btn btn-custom mt-0 mb-0 pt-0 pb-0 custom-bg-warning text-white h-50 w-100 mb-3 mt-3 ">
+        <button onclick="document.location.href='/login'" class="btn btn-custom mt-0 mb-0 pt-0 pb-0 custom-bg-warning text-white h-50 w-100 mb-3 mt-3 ">
           <h4 class="font-semibold" style="margin-bottom: 0px;">konsultasi</h4>
         </button>
       </div>
