--- a/app/templates/user/dashboard.html
+++ b/app/templates/user/dashboard.html
@@ -99,16 +99,11 @@
                             <h5 class="modal-title" id="cameraModalLabel">Capture Photo</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                         </div>
-                        <div class="col-md-6 mb-3 text-center">
-                    <img src="../static/icon/hasil_diagnosa.svg" class="img-responsive img" alt="icon_cek_hasil">
-                    <p class="font-semibold mt-1">Hasil Diagnosa </p>
-                    <button type="button" id="cek_hasil" class="btn btn-custom custom-bg-warning w-100 text-white font-semibold" style="height: 42.8px;">Lihat Hasil</button>
-                </div>
-                     <div class="col-md-6 mb-3 text-center">
-                    <img src="../static/icon/hasil_diagnosa.svg" class="img-responsive img" alt="icon_cek_hasil">
-                    <p class="font-semibold mt-1">Hasil Diagnosa </p>
-                    <button type="button" id="cek_hasil" class="btn btn-custom custom-bg-warning w-100 text-white font-semibold" style="height: 42.8px;">Lihat Hasil</button>
-                </div>
+                        <div class="modal-body">
+                            <video id="video" width="100%" height="240" autoplay></video>
+                            <button id="snap" class="btn btn-success mt-2">Capture Photo</button>
+                            <canvas id="canvas" width="320" height="240" style="display: none;"></canvas>
+                        </div>
                         <div class="modal-footer">
                             <button id="upload" class="btn btn-primary">Upload Photo</button>
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -147,6 +142,7 @@
             var video = document.getElementById('video');
             var canvas = document.getElementById('canvas');
             var context = canvas.getContext('2d');
+
             $('#cameraModal').on('shown.bs.modal', function () {
                 navigator.mediaDevices.getUserMedia({ video: true })
                     .then(function (stream) {
@@ -172,7 +168,7 @@
 
                     $.ajax({
                         type: 'POST',
-                        url: '/predict',
+                        url: '/predict_mtcnn',// /predict_mtnn buat mengenali wajah dulu baru mengenali penyakit  /predict buat langsung mengenaali penyakit
                         data: formData,
                         processData: false,
                         contentType: false,
@@ -217,7 +213,7 @@
                 $('#cek_hasil').text("Loading...")
                 $('#cek_hasil').attr("disabled","disabled")
                 $.ajax({
-                    url: '/predict',
+                    url: '/predict_mtcnn',// /predict_mtnn buat mengenali wajah dulu baru mengenali penyakit  /predict buat langsung mengenaali penyakit
                     data: formData,
                     cache: false,
                     contentType: false,
